[tool.poetry]
name = "gundi-core"
version = "1.11.3"

description = ""
authors = [
    "Mariano M <marianom@earthranger.com>",
    "Victor Garcia <victorg@earthranger.com>"
]
readme = "README.md"
packages = [{include = "gundi_core"}]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.7.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7"
pytest-asyncio = "^0.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
