[project]
name = "gundi-core"
dynamic = ["version"]
description = "Shared schemas and system events for the Gundi platform."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.7"
authors = [
    { name = "Mariano M", email = "marianom@earthranger.com" },
    { name = "Victor Garcia", email = "victorg@earthranger.com" },
]

dependencies = [
    "pydantic>=1.7.3,<2",
]

[dependency-groups]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
]

[tool.hatch.version]
path = "gundi_core/__init__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
